tests/ui/item.stderr
error: #[tag] at an invalid position
 --> $DIR/item.rs:7:5
  |
7 |     #[tag = 1]
  |     ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/item.rs:13:5
   |
13 |     #[optional]
   |     ^^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/item.rs:19:5
   |
19 |     #[flatten]
   |     ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:25:5
   |
25 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:29:5
   |
29 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:33:5
   |
33 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/item.rs:41:5
   |
41 |     #[tag = 1]
   |     ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/item.rs:47:5
   |
47 |     #[optional]
   |     ^^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/item.rs:53:5
   |
53 |     #[flatten]
   |     ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:59:5
   |
59 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:63:5
   |
63 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:67:5
   |
67 |     #[untagged]
   |     ^^^^^^^^^^^
